--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
+    <script src="https://js.stripe.com/v3/"></script>
 
 	<!-- build:css assets/css/all.css -->
 	<link rel="stylesheet" href="assets/css/plugins.css" />
@@ -21,6 +22,7 @@
 	<script src="assets/js/plugins.js"></script>
 	<script src="assets/js/intlTelInput.js"></script>
 	<script src="assets/js/script.js"></script>
+    <script src="assets/js/client.js"></script>
 	<!-- endbuild -->
 </head>
 <body>
@@ -122,7 +124,8 @@
 												</div>
 											</div>
 										</div>
-										<div class="form-group">
+                                        <div id="card-element"><!--Stripe.js injects the Card Element--></div>
+										<div class="form-group" hidden>
 											<label for="phoneInput" class="form-label">Credit Card Number*</label>
 		  									<div class="form-control form-control-group">
 		  										<input type="text" name="" class="form-control-inner" placeholder="Card number">
@@ -139,7 +142,7 @@
 											<p class="amount-col">US<span class="amountTotalJs"></span></p>
 										</div>
 										<div class="form-group">
-											<button type="button" class="btn btn-danger stepsBtnJs">Get Instant Access Now</button>
+											<button type="button" class="btn btn-danger stepsBtnJs" id="strapiBtn">Get Instant Access Now</button>
 											<p class="small-text">*Payments are secured with 24-bit encryption*</p>
 										</div>
 									</div>
