--- a/src/index.html
+++ b/src/index.html
@@ -121,14 +121,11 @@
 												</div>
 											</div>
 										</div>
-                                        <div id="card-element"><!--Stripe.js injects the Card Element--></div>
-										<div class="form-group" hidden>
+										<div class="form-group">
 											<label for="phoneInput" class="form-label">Credit Card Number*</label>
-		  									<div class="form-control form-control-group">
-		  										<input type="text" name="" class="form-control-inner" placeholder="Card number" id="card_number">
-		  										<input type="text" name="" class="form-control-inner" placeholder="MM/YY" id="ex_month">
-		  										<input type="text" name="" class="form-control-inner" placeholder="CVC" id="cvc">
-		  									</div>
+											<div class="form-control form-control-group">
+												<div id="card-element"><!--Stripe.js injects the Card Element--></div>
+											</div>
 										</div>
 										<div class="t-foot">
 											<p>Item</p>
