--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
-    <script src="https://js.stripe.com/v3/"></script>
+	<script src="https://js.stripe.com/v3/"></script>
 
 	<!-- build:css assets/css/all.css -->
 	<link rel="stylesheet" href="assets/css/plugins.css" />
@@ -20,7 +20,7 @@
 	<script src="assets/js/plugins.js"></script>
 	<script src="assets/js/intlTelInput.js"></script>
 	<script src="assets/js/script.js"></script>
-    <script src="assets/js/client.js"></script>
+	<script src="assets/js/stripe.js"></script>
 	<!-- endbuild -->
 </head>
 <body>
