--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,10 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
 	<script src="https://js.stripe.com/v3/"></script>
 
+	<script>
+		const ENV_VARS = ENV_VARS_CONTENT
+	</script>
+
 	<!-- build:css assets/css/all.css -->
 	<link rel="stylesheet" href="assets/css/plugins.css" />
 	<link rel="stylesheet" href="assets/css/plugins/intlTelInput.css" />
@@ -89,7 +93,7 @@
 								</div>
 							</form>
 
-							<form class="second-form-step validateJsBilling">
+							<form class="second-form-step validateJsBilling" id="payment-form">
 								<div class="form-body">
 									<div class="">
 										<a href="#" class="back-btn backBtnJs">< Name and email</a>
@@ -125,6 +129,7 @@
 											<label for="phoneInput" class="form-label">Credit Card Number*</label>
 											<div class="form-control form-control-group">
 												<div id="card-element"><!--Stripe.js injects the Card Element--></div>
+												<p id="card-error" role="alert"></p>
 											</div>
 										</div>
 										<div class="t-foot">
@@ -136,7 +141,7 @@
 											<p class="amount-col">US<span class="amountTotalJs"></span></p>
 										</div>
 										<div class="form-group">
-											<button type="button" class="btn btn-danger stepsBtnJs" id="strapiBtn">Get Instant Access Now</button>
+											<button type="submit" class="btn btn-danger stepsBtnJs" id="strapiBtn">Get Instant Access Now</button>
 											<p class="small-text">*Payments are secured with 24-bit encryption*</p>
 										</div>
 									</div>
