--- a/src/index.html
+++ b/src/index.html
@@ -196,7 +196,8 @@
 							</form>
 
 						</div>
-						<form id="paypal-form" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" name="form-pp">
+						<form id="paypal-form" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post"
+							name="form-pp">
 							<input type="hidden" name="business" value="mahamai@rambler.ru">
 							<input type="hidden" name="first_name" value="">
 							<input type="hidden" name="email" value="">
