hide paypal button on first step

--- a/src/index.html
+++ b/src/index.html
@@ -197,7 +197,7 @@
 
 						</div>
 						<form id="paypal-form" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post"
-							name="form-pp">
+							name="form-pp" class="paypal-form hidden">
 							<input type="hidden" name="business" value="mahamai@rambler.ru">
 							<input type="hidden" name="first_name" value="">
 							<input type="hidden" name="email" value="">
