--- a/src/paypal-checkout-1.html
+++ b/src/paypal-checkout-1.html
@@ -110,8 +110,8 @@
 												Phone number*
 											</label>
 
-											<input type="text" class="form-control phoneHiddenJs" id="phone-send"
-												name="phone" placeholder="Type your phone number" />
+											<input type="text" class="form-control phoneHiddenJs phone-hidden"
+												   id="phone-send" name="phone" placeholder="Type your phone number" />
 
 
 											<input type="text" class="form-control" id="phone" name="phone"
@@ -135,7 +135,7 @@
 								</div>
 							</form>
 
-							<form class="second-form-step validateJsBilling" id="payment-form">
+							<div class="second-form-step validateJsBilling" id="payment-form">
 								<div class="form-body">
 									<div class="">
 										<a href="#" class="back-btn backBtnJs">
@@ -157,6 +157,7 @@
 															<p>US$1,497</p>
 														</div>
 													</div>
+													<!--
 													<div class="form-check-row">
 														<div class="form-check">
 															<input class="form-check-input" type="radio"
@@ -168,6 +169,7 @@
 															<p>3x installments of US$797</p>
 														</div>
 													</div>
+													-->
 												</div>
 
 
@@ -185,9 +187,11 @@
 														action="https://www.sandbox.paypal.com/cgi-bin/webscr"
 														method="post" name="form-pp"
 														class="paypal-form paypalChecoutJs hidden">
-														<input type="hidden" name="business" value="mahamai@rambler.ru">
+														<input type="hidden" name="business" value="alex@selfmademedia.xyz">
 														<input type="hidden" name="first_name" value="">
 														<input type="hidden" name="email" value="">
+														<input type="hidden" name="night_phone_a" value="">
+														<input type="hidden" name="night_phone_b" value="">
 														<input type="hidden" name="image_url"
 															value="http://paypal.local/static/logo.png">
 														<input type="hidden" name="charset" value="utf8">
@@ -222,7 +226,7 @@
 												</div>
 									</div>
 								</div>
-							</form>
+							</div>
 						</div>
 
 					</div>
