--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Checkout</title>
+	<link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
 	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -77,11 +78,11 @@
 							</div>
 
 							<!-- activecampaign -->
-							<form method="POST" action="https://i909.activehosted.com/proc.php" id="_form_1_"
-								class="first-form-step _form _form_1 _inline-form  _dark" novalidate>
+							<form method="POST" action="https://alextjackson1.activehosted.com/proc.php" id="_form_3_"
+								class="first-form-step _form _form_3 _inline-form  _dark" novalidate>
 								<div class="form-body">
-									<input type="hidden" name="u" value="1" />
-									<input type="hidden" name="f" value="1" />
+									<input type="hidden" name="u" value="3" />
+									<input type="hidden" name="f" value="3" />
 									<input type="hidden" name="s" />
 									<input type="hidden" name="c" value="0" />
 									<input type="hidden" name="m" value="0" />
@@ -110,19 +111,16 @@
 												Phone number*
 											</label>
 
+											<input type="text" class="form-control phone-dis" id="phone-send"
+												name="phone-send" placeholder="Type your phone number" />
+
+											<!-- hidden input -->
 											<input type="text" class="form-control phoneHiddenJs phone-hidden"
-												id="phone-send" name="phone" placeholder="Type your phone number" />
-
-
-											<input type="text" class="form-control" id="phone" name="phone"
-												placeholder="Type your phone number" required>
-
+												id="phone" name="phone" required />
 
 										</div>
-
-
 										<div class="form-group">
-											<button id="_form_1_submit" class="btn btn-danger _submit" type="submit">
+											<button id="_form_3_submit" class="btn btn-danger _submit" type="submit">
 												Go To Step #2
 											</button>
 											<p class="small-text">We respect your privacy & information</p>
