add link in header

--- a/src/paypal-checkout-1.html
+++ b/src/paypal-checkout-1.html
@@ -35,11 +35,11 @@
 	<header class="header">
 		<div class="container">
 			<div class="inner-wrap">
-				<a href="#" class="logo">
+				<a href="/" class="logo">
 					<img src="./assets/images/logo.png" alt="" />
 				</a>
 
-				<a href="#" class="link">Member Login</a>
+				<a href="https://donibrown.mykajabi.com/login" class="link">Member Login</a>
 			</div>
 		</div>
 	</header>
