add link on paypal-checkout page

--- a/src/paypal-checkout-1.html
+++ b/src/paypal-checkout-1.html
@@ -250,7 +250,8 @@
 							<li><span>❤</span> 180 Day "Do The Work" Refund Guarantee</li>
 						</ul>
 						<div class="bottom-holder">
-							<p class="join-text">Don't want to pay now? <a href="#" class="link">Try PayPal Credit!</a>
+							<p class="join-text">Don't want to pay now? <a href="paypal-checkout-1.html"
+									class="link">Try PayPal Credit!</a>
 							</p>
 							<img data-src="./assets/images/paypal_credit_logo_v2.jpeg?auto=compress,format&amp;fit=scale&amp;w=182&amp;h=61"
 								srcset="./assets/images/paypal_credit_logo_v2.jpeg 1x , ./assets/images/paypal_credit_logo_v2.jpeg?auto=compress,format&amp;dpr=2&amp;fit=scale&amp;w=182&amp;h=61 2x"
