--- a/src/index.html
+++ b/src/index.html
@@ -80,6 +80,7 @@
 							<!-- activecampaign -->
 							<form method="POST" action="https://alextjackson1.activehosted.com/proc.php" id="_form_3_"
 								class="first-form-step _form _form_3 _inline-form  _dark" novalidate>
+
 								<div class="form-body">
 									<input type="hidden" name="u" value="3" />
 									<input type="hidden" name="f" value="3" />
@@ -263,7 +264,8 @@
 							<li><span>❤</span> 180 Day "Do The Work" Refund Guarantee</li>
 						</ul>
 						<div class="bottom-holder">
-							<p class="join-text">Don't want to pay now? <a href="#" class="link">Try PayPal Credit!</a>
+							<p class="join-text">Don't want to pay now? <a href="paypal-checkout-1.html"
+									class="link">Try PayPal Credit!</a>
 							</p>
 							<img data-src="./assets/images/paypal_credit_logo_v2.jpeg?auto=compress,format&amp;fit=scale&amp;w=182&amp;h=61"
 								srcset="./assets/images/paypal_credit_logo_v2.jpeg 1x , ./assets/images/paypal_credit_logo_v2.jpeg?auto=compress,format&amp;dpr=2&amp;fit=scale&amp;w=182&amp;h=61 2x"
