add hidden form

--- a/src/index.html
+++ b/src/index.html
@@ -134,6 +134,96 @@
 								</div>
 							</form>
 
+
+
+							<!-- <form method="POST" action="https://alextjackson1.activehosted.com/proc.php" id="_form_7_"
+								class="_form _form_7 _inline-form  _dark hiddenFormJs" novalidate>
+								<input type="hidden" name="u" value="7" />
+								<input type="hidden" name="f" value="7" />
+								<input type="hidden" name="s" />
+								<input type="hidden" name="c" value="0" />
+								<input type="hidden" name="m" value="0" />
+								<input type="hidden" name="act" value="sub" />
+								<input type="hidden" name="v" value="2" />
+								<div class="_form-content">
+									<div class="form-group">
+										<label for="fullname">Full Name*</label>
+										<input type="text" id="fullname2" name="fullname" placeholder="Type your name"
+											required />
+									</div>
+									<div class="form-group">
+										<label for="email">Email*</label>
+										<input type="text" id="email" name="email" placeholder="Type your email"
+											required />
+									</div>
+									<div class="form-group">
+										<label for="phone">Phone number*</label>
+										<input type="text" id="phone" name="phone" placeholder="Type your phone number"
+											required />
+									</div>
+									<div class="form-group">
+										<label for="field[8]">Price*</label>
+										<input type="text" id="field[8]" name="field[8]" value="$1,497" placeholder=""
+											class="priceHolderJs" required />
+									</div>
+									<div class="_button-wrapper _full_width">
+										<button id="_form_7_submit" class="_submit" type="submit">
+											Submit full pay members
+										</button>
+									</div>
+								</div>
+							</form> -->
+
+							<div class="_form_7 hiddenFormJs hidden-form"></div>
+							<script src="https://alextjackson1.activehosted.com/f/embed.php?id=7" type="text/javascript"
+								charset="utf-8"></script>
+
+
+							<!-- <form method="POST" action="https://alextjackson1.activehosted.com/proc.php" id="_form_9_"
+								class="_form _form_9 _inline-form  _dark hiddenFormJs" novalidate>
+								<input type="hidden" name="u" value="9" />
+								<input type="hidden" name="f" value="9" />
+								<input type="hidden" name="s" />
+								<input type="hidden" name="c" value="0" />
+								<input type="hidden" name="m" value="0" />
+								<input type="hidden" name="act" value="sub" />
+								<input type="hidden" name="v" value="2" />
+								<div class="_form-content">
+									<div class="form-group">
+										<label for="fullname">Full Name*</label>
+										<input type="text" id="fullname" name="fullname" placeholder="Type your name"
+											required />
+									</div>
+									<div class="form-group">
+										<label for="email">Email*</label>
+										<input type="text" id="email" name="email" placeholder="Type your email"
+											required />
+									</div>
+									<div class="form-group">
+										<label for="phone">Phone*</label>
+										<input type="text" id="phone" name="phone" placeholder="Type your phone number"
+											required />
+									</div>
+									<div class="form-group">
+										<label for="field[8]">Price*</label>
+										<input type="text" id="field[8]" name="field[8]" value="$797" placeholder=""
+											class="priceHolderJs" required />
+									</div>
+									<div class="_button-wrapper _full_width">
+										<button id="_form_9_submit" class="_submit" type="submit">
+											Submit payment plan members
+										</button>
+									</div>
+								</div>
+							</form> -->
+
+							<div class="_form_9 hiddenFormJs hidden-form"></div>
+							<script src="https://alextjackson1.activehosted.com/f/embed.php?id=9" type="text/javascript"
+								charset="utf-8"></script>
+
+
+
+
 							<form class="second-form-step validateJsBilling" id="payment-form">
 								<div class="form-body">
 									<div class="">
