add hidden form on paypal-checkout-1 page

--- a/src/paypal-checkout-1.html
+++ b/src/paypal-checkout-1.html
@@ -134,6 +134,12 @@
 								</div>
 							</form>
 
+							<!-- hidden form -->
+							<div class="_form_7 hiddenFormJs hidden-form"></div>
+							<script src="https://alextjackson1.activehosted.com/f/embed.php?id=7" type="text/javascript"
+								charset="utf-8"></script>
+
+
 							<div class="second-form-step validateJsBilling" id="payment-form">
 								<div class="form-body">
 									<div class="">
