--- a/src/index.html
+++ b/src/index.html
@@ -196,6 +196,19 @@
 													<p class="title-total titleTotalJs"></p>
 													<p class="amount-col">US<span class="amountTotalJs"></span></p>
 												</div>
+
+												<div class="form-group fg-top">
+													<div class="custom-checkbox">
+														<input type="checkbox" class="form-checkbox-input"
+															id="checkTerm" />
+														<label for="checkTerm"></label>
+													</div>
+													<p class="check-label">I agree to the <a href="/terms">terms</a>
+														and <a href="/returns">refund
+															policy</a> of the Beauty Boss program.
+													</p>
+												</div>
+
 												<div class="form-group">
 													<button type="submit" class="btn btn-danger strapiBtn"
 														id="strapiBtn"><span class="spinner hidden"></span><span
@@ -207,7 +220,8 @@
 														<a href="#">Success</a>
 													</div>
 
-													<p class="small-text">*Payments are secured with 256-bit encryption*
+													<p class="small-text">*Payments are secured with 256-bit
+														encryption*
 													</p>
 												</div>
 									</div>
