--- a/src/index.html
+++ b/src/index.html
@@ -198,7 +198,7 @@
 												</div>
 
 												<div class="form-group fg-top">
-													<div class="custom-checkbox">
+													<div class="custom-checkbox customCheckJs">
 														<input type="checkbox" class="form-checkbox-input"
 															id="checkTerm" />
 														<label for="checkTerm"></label>
@@ -210,9 +210,10 @@
 												</div>
 
 												<div class="form-group">
-													<button type="submit" class="btn btn-danger strapiBtn"
+													<button type="submit" class="btn btn-danger strapiBtn disabled"
 														id="strapiBtn"><span class="spinner hidden"></span><span
-															class="button-text">Get Instant
+															class="button-text">Get
+															Instant
 															Access Now</span></button>
 
 													<!-- result message -->
