--- a/src/index.html
+++ b/src/index.html
@@ -203,8 +203,9 @@
 															id="checkTerm" />
 														<label for="checkTerm"></label>
 													</div>
-													<p class="check-label">I agree to the <a href="/terms">terms</a>
-														and <a href="/returns">refund
+													<p class="check-label">I agree to the <a
+															href="https://www.beautybossmentoring.com/terms">terms</a>
+														and <a href="https://www.beautybossmentoring.com/returns">refund
 															policy</a> of the Beauty Boss program.
 													</p>
 												</div>
