--- a/src/index.html
+++ b/src/index.html
@@ -156,7 +156,7 @@
 													<div class="form-check-row">
 														<div class="form-check">
 															<input class="form-check-input" type="radio"
-																name="flexRadioDefault" id="radioOneTime" value="$1,497"
+																name="flexRadioDefault" id="radioOneTime" value="paymentOneTime"
 																checked>
 															<label class="form-check-label" for="radioOneTime">Beauty
 																Boss 2.0 - One-time payment</label>
@@ -168,7 +168,7 @@
 													<div class="form-check-row">
 														<div class="form-check">
 															<input class="form-check-input" type="radio"
-																name="flexRadioDefault" id="radioPayment" value="$797">
+																name="flexRadioDefault" id="radioPayment" value="paymentPlan">
 															<label class="form-check-label" for="radioPayment">Beauty
 																Boss 2.0 - Payment plan</label>
 														</div>
