--- a/src/index.html
+++ b/src/index.html
@@ -156,8 +156,8 @@
 													<div class="form-check-row">
 														<div class="form-check">
 															<input class="form-check-input" type="radio"
-																name="flexRadioDefault" id="radioOneTime" value="paymentOneTime"
-																checked>
+																name="flexRadioDefault" id="radioOneTime"
+																value="paymentOneTime" checked="checked">
 															<label class="form-check-label" for="radioOneTime">Beauty
 																Boss 2.0 - One-time payment</label>
 														</div>
@@ -168,7 +168,8 @@
 													<div class="form-check-row">
 														<div class="form-check">
 															<input class="form-check-input" type="radio"
-																name="flexRadioDefault" id="radioPayment" value="paymentPlan">
+																name="flexRadioDefault" id="radioPayment"
+																value="paymentPlan">
 															<label class="form-check-label" for="radioPayment">Beauty
 																Boss 2.0 - Payment plan</label>
 														</div>
