--- a/src/index.html
+++ b/src/index.html
@@ -157,7 +157,7 @@
 														<div class="form-check">
 															<input class="form-check-input" type="radio"
 																name="flexRadioDefault" id="radioOneTime"
-																value="paymentOneTime" checked="checked">
+																value="paymentOneTime">
 															<label class="form-check-label" for="radioOneTime">Beauty
 																Boss 2.0 - One-time payment</label>
 														</div>
@@ -169,7 +169,7 @@
 														<div class="form-check">
 															<input class="form-check-input" type="radio"
 																name="flexRadioDefault" id="radioPayment"
-																value="paymentPlan">
+																value="paymentPlan" checked="checked">
 															<label class="form-check-label" for="radioPayment">Beauty
 																Boss 2.0 - Payment plan</label>
 														</div>
