--- a/src/index.html
+++ b/src/index.html
@@ -212,7 +212,7 @@
 												</div>
 
 												<div class="form-group">
-													<button type="submit" class="btn btn-danger strapiBtn disabled"
+													<button type="button" class="btn btn-danger strapiBtn disabled"
 														id="strapiBtn"><span class="spinner hidden"></span><span
 															class="button-text">Get
 															Instant
