--- a/src/index.html
+++ b/src/index.html
@@ -157,7 +157,8 @@
 														<div class="form-check">
 															<input class="form-check-input" type="radio"
 																name="flexRadioDefault" id="radioOneTime"
-																value="paymentOneTime">
+																value="paymentOneTime" checked="checked"
+																data-val="$1,497">
 															<label class="form-check-label" for="radioOneTime">Beauty
 																Boss 2.0 - One-time payment</label>
 														</div>
@@ -169,7 +170,7 @@
 														<div class="form-check">
 															<input class="form-check-input" type="radio"
 																name="flexRadioDefault" id="radioPayment"
-																value="paymentPlan" checked="checked">
+																value="paymentPlan" data-val="$797">
 															<label class="form-check-label" for="radioPayment">Beauty
 																Boss 2.0 - Payment plan</label>
 														</div>
