update checked value on page2 change button color

--- a/src/index.html
+++ b/src/index.html
@@ -121,7 +121,7 @@
 
 										</div>
 										<div class="form-group">
-											<button id="_form_3_submit" class="btn btn-danger _submit" type="submit">
+											<button id="_form_3_submit" class="btn btn-primary _submit" type="submit">
 												Go To Step #2
 											</button>
 											<p class="small-text">We respect your privacy & information</p>
@@ -213,7 +213,7 @@
 												</div>
 
 												<div class="form-group">
-													<button type="button" class="btn btn-danger strapiBtn disabled"
+													<button type="button" class="btn btn-primary strapiBtn disabled"
 														id="strapiBtn"><span class="spinner hidden"></span><span
 															class="button-text">Get
 															Instant
