--- a/src/paypal-checkout-1.html
+++ b/src/paypal-checkout-1.html
@@ -123,7 +123,7 @@
 
 
 										<div class="form-group">
-											<button id="_form_3_submit" class="btn btn-danger _submit" type="submit">
+											<button id="_form_3_submit" class="btn btn-primary _submit" type="submit">
 												Go To Step #2
 											</button>
 											<p class="small-text">We respect your privacy & information</p>
@@ -156,7 +156,7 @@
 														<div class="form-check">
 															<input class="form-check-input" type="radio"
 																name="flexRadioDefault" id="radioOneTime" value="$1,497"
-																checked>
+																data-val="$1,497" checked="checked">
 															<label class="form-check-label" for="radioOneTime">Beauty
 																Boss 2.0 - One-time payment</label>
 														</div>
@@ -191,9 +191,8 @@
 												<div class="form-group">
 
 													<form id="paypal-form"
-														action="https://www.paypal.com/cgi-bin/webscr"
-														method="post" name="form-pp"
-														class="paypal-form paypalChecoutJs hidden">
+														action="https://www.paypal.com/cgi-bin/webscr" method="post"
+														name="form-pp" class="paypal-form paypalChecoutJs hidden">
 														<input type="hidden" name="business"
 															value="alex@selfmademedia.xyz">
 														<input type="hidden" name="first_name" value="">
