--- a/src/index.html
+++ b/src/index.html
@@ -157,13 +157,14 @@
 														<div class="form-check">
 															<input class="form-check-input" type="radio"
 																name="flexRadioDefault" id="radioOneTime"
-																value="paymentOneTime" checked="checked"
-																data-val="$1,497">
+																value="paymentOneTime" checked="checked" data-val="$1">
+															<!-- data-val="$1,497"> -->
 															<label class="form-check-label" for="radioOneTime">Beauty
 																Boss 2.0 - One-time payment</label>
 														</div>
 														<div class="form-price">
-															<p>US$1,497</p>
+															<!-- <p>US$1,497</p> -->
+															<p>US$1</p>
 														</div>
 													</div>
 													<div class="form-check-row">
