--- a/src/index.html
+++ b/src/index.html
@@ -157,8 +157,8 @@
 														<div class="form-check">
 															<input class="form-check-input" type="radio"
 																name="flexRadioDefault" id="radioOneTime"
-																value="paymentOneTime" checked="checked" data-val="$1">
-															<!-- data-val="$1,497"> -->
+																value="paymentOneTime" checked="checked"
+																data-val="$1,497">
 															<label class="form-check-label" for="radioOneTime">Beauty
 																Boss 2.0 - One-time payment</label>
 														</div>
@@ -176,7 +176,8 @@
 																Boss 2.0 - Payment plan</label>
 														</div>
 														<div class="form-price">
-															<p>3x installments of US$797</p>
+															<!-- <p>3x installments of US$797</p> -->
+															<p>3x installments of US$1</p>
 														</div>
 													</div>
 												</div>
