Red error and shake card

--- a/src/index.html
+++ b/src/index.html
@@ -21,11 +21,13 @@
 
 	<!-- build:css assets/css/all.css -->
 	<link rel="stylesheet" href="assets/css/plugins.css" />
+	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
 	<link rel="stylesheet" href="assets/css/plugins/intlTelInput.css" />
 	<link rel="stylesheet" href="assets/css/style.css" />
 	<!-- endbuild -->
 	<!-- build:js assets/js/all.js defer -->
 	<script src="assets/js/plugins.js"></script>
+	<script src="//code.jquery.com/ui/1.12.1/jquery-ui.js">//only shake effect</script>
 	<script src="assets/js/intlTelInput.js"></script>
 	<script src="assets/js/script.js"></script>
 	<script src="assets/js/stripe.js"></script>
