--- a/src/index.html
+++ b/src/index.html
@@ -184,7 +184,7 @@
 												<div class="form-group">
 													<label for="phoneInput" class="form-label">Credit Card
 														Number*</label>
-													<div class="form-control form-control-group">
+													<div id="card-form-control" class="form-control form-control-group">
 														<div id="card-element">
 															<!--Stripe.js injects the Card Element-->
 														</div>
@@ -326,6 +326,7 @@
 			</div>
 		</div>
 	</footer>
+	<div id="overlay" class="hidden"><div class="ov_text">Your Order Is Being Processed...</div></div>
 </body>
 
 </html>
